# BTech_Coursework

./: .How to Run Java Applet.txt  CMakeLists.txt  README.md  ReadmeLinux.md  Test1.c  TimeFormat.cpp  quicksort.cpp  test.cpp  test1.cpp
3rd semester/: CMakeLists.txt
3rd semester/Assignments/: oop1.cpp  oop10b1.cpp  oop8a2.cpp  oop8b.cpp  oop8b1.cpp
3rd semester/DSA Lab/Week 1/HA/: 1.c  1_warning.c
3rd semester/DSA Lab/Week 11/: 5copy.c  6.c  6copy.c
3rd semester/DSA Lab/Week 12/: Allsort.c
3rd semester/DSA Lab/Week 2/LA/: 3.c
3rd semester/DSA Lab/Week 3/LA/: 1.c
3rd semester/DSA Lab/Week 5/LA/: 4.c
3rd semester/DSA Lab/Week 6/LA/: 1.c
3rd semester/DSA Lab/Week 9/: 5.c  6.c
3rd semester/DSA Lab/lab exam/: 1.c
3rd semester/OOP Lab/Week 1/: 1.c  2.c
3rd semester/OOP Lab/Week 10/: 1.cpp  2.cpp
3rd semester/OOP Lab/Week 11/: 2.cpp  6.cpp
3rd semester/OOP Lab/Week 13/: 2.cpp  5a.cpp  5b.cpp
3rd semester/OOP Lab/Week 14/: 1.cpp  5.cpp
3rd semester/OOP Lab/Week 15/: 3.cpp  5.cpp
3rd semester/OOP Lab/Week 2/: 4.cpp  6.c  7.c
3rd semester/OOP Lab/Week 3/: 1.cpp
3rd semester/OOP Lab/Week 4/: 1.cpp  2.cpp  3.cpp  6.cpp
3rd semester/OOP Lab/Week 6/: 4.cpp
3rd semester/OOP Lab/Week 7/: 4.cpp
3rd_semester/Assignments/: Power.c  oop10a1.cpp  oop10a2.cpp  oop10b2.cpp
3rd_semester/DSA Lab/Week 10/: BST1.c
3rd_semester/DSA Lab/Week 11/: 1.c  2.c  3.c
3rd_semester/DSA Lab/Week 12/: Heapsort.c  Selectionsort.c  temp.c
3rd_semester/DSA Lab/Week 8/: 1.c  2.c
3rd_semester/DSA Lab/Week 9/: 2.c  3.c  4.c
3rd_semester/DSA Lab/lab exam/: 2.c
3rd_semester/OOP Lab/Week 12/: 1.cpp
3rd_semester/OOP Lab/Week 13/: 1.cpp
3rd_semester/OOP Lab/Week 14/: 3.cpp
3rd_semester/OOP Lab/Week 2/: 1.c  3.c  5.cpp
3rd_semester/OOP Lab/Week 5/: 1.cpp
3rd_semester/OOP Lab/Week 6/: 1.cpp  5.cpp
3rd_semester/OOP Lab/Week 7/: 1.cpp  2.cpp
3rd_semester/OOP Lab/Week 8/: 1.cpp  2.cpp  4.cpp
3rd_semester/OOP Lab/Week 9/: 5.cpp
4th semester/DBMS lab/: A5.sql  Employee.sql  Employeeentry.sql  Student.sql  abc.sql  test.sql
4th semester/DBMS lab/spool/: output.txt
4th semester/OS lab/: Assignment 1.html
4th semester/OS lab/Lab-10/: prioritypreempt.c
4th semester/OS lab/Lab-11/: rr.c  rrmain.c
4th semester/OS lab/Lab-2/: q3hard.txt
4th semester/OS lab/Lab-3/: 2.sh  7.sh  8.sh
4th semester/OS lab/Lab-4/: 2.sh  6.sh  grade.sh
4th semester/OS lab/Lab-5/: q12.sh  q15.sh  q16.sh  q17.sh  q2.sh  q20.sh  q21.sh  q22.sh  q3.sh  q4.sh  q5.sh  q6.sh  q7.sh  q8.sh
4th semester/OS lab/Lab-6/: q2.sh  q4.sh  q5.sh  q6.sh  q7.sh  q9.sh
4th semester/OS lab/Lab-7/: 1.c  2.c  3.c  7.c  7ol.c
4th semester/OS lab/Lab-8/: fcfs.c  fcfs1.c
4th semester/OS lab/Lab-9/: srtf.c
4th semester/WT lab/Lab 1/: a.html
4th semester/WT lab/Lab 10/: Q3.java  Q4.java
4th semester/WT lab/Lab 11/: Q4.java  Q5.java  Q6.java
4th semester/WT lab/Lab 2/: Knowledge.html  OIP.jfif  Question 1.html  Question 2.html  Question 3.html  Question 4.html
4th semester/WT lab/Lab 3/: Q3.html  Q4.html
4th semester/WT lab/Lab 4/: package.bluej  q1.java  q2.java  q3.java  q4.java  q5.java
4th semester/WT lab/Lab 5/: circle.java  equation.java
4th semester/WT lab/Lab 6/: Point.java  PointDemo.java  Toy.java  Toydemo.java
4th semester/WT lab/Lab 8/: Q4.java  Q4new.java  Q6.java
4th semester/WT lab/Lab 9/: Q3.java
4th_semester/DBMS_lab/: lab sessional.sql
4th_semester/OS_lab/: test.sh
4th_semester/WT_lab/: settings.json
5th_Semester/CN_Lab/: 4.6.5 Packet Tracer - Connect a Wired and Wireless LAN.docx
6th_semester/CC_Lab/: 1.c
6th_semester/ML/: ML Assignment 2.ipynb  ML Assignment 3.ipynb  Regression.ipynb
6th_semester/NLP/: Bow_bag_of_words.ipynb  NLP.ipynb  Spam Detection.ipynb  Untitled.ipynb
6th_semester/TT_Lab/: Bengal Crime Study.ipynb  LAB-EXAM-BATCH-2.pptx  Lab 5.ipynb  Lab-1.ipynb  Lab-2.ipynb  Lab-3.ipynb  Lab-4.ipynb  Lab-5.ipynb  Lab-6.ipynb  Lab4H.ipynb  Lab5.docx  T AND T lab exam for cs-19-da.docx  Untitled.ipynb  app.py  app1.py  ass3.ipynb  eyeDetectionCat.py  retail.csv  studentsmarks.csv  studentsmarks1.csv
Applications/: ExtendedEuclidean  ExtendedEuclidean.c  WithoutLong.c
Assignments/: LL1.c  LL2.c  Queue.c  oop10a3.cpp  oop8a.cpp  oop8b2.cpp  oop8b2b.cpp
C/: CMakeLists.txt  kstack.c
C++/: 1'sComplement.cpp  2'sComplement.cpp  Absolutesum.cpp  Armstrong.cpp  Arrayreverse.cpp  BinaryToDecimal.cpp  C++Test1.cpp  CSEcalculator.cpp  DecimalToBinary.cpp  Factorial.cpp  Fibonacci_recursive.cpp  Fibonnaci.cpp  Primenumber.cpp  Reassembler.cpp  ReverseNumber.cpp  TimeFormat.cpp  quicksort.cpp  test.c
C++/Others/: test.cpp
CPPprograms/: 1'sComplement.cpp  2'sComplement.cpp  MatrixMultiplication.cpp  Palindrome.cpp  PrimeNumberRecursive.cpp  RecursiveFactorial.cpp  RecursivePalindrome.cpp  Sumofdigits.cpp  SwapWithoutThirdVar.cpp  test.cpp  test1.cpp  vectorTest.cpp
CPPprograms/DSA Lab/: 1.c  3.c  7.c
Coursera/: 2.c  3.c  4.c  5.c  6.c  elephant_seal_data.txt  poem.c  test6.c
Coursera unordered/: 1.c  2.c  2.cpp  2n.c  Binarytree.c  Operatoroverload.cpp  answer-hw3.txt  ctocpp.cpp  doublylinkedlist.c  filearray.c  test.c  testBT.c
DSA Lab/Week 10/: BST.c  BST1.c  t.c  test.c
DSA Lab/Week 11/: 4.c  5.c
DSA Lab/Week 12/: Bubblesort.c  Insertionsort.c
DSA Lab/Week 2/: 1.c  3.c  3l.c
DSA Lab/Week 7/: 3.c
DSA Lab/Week 8/: 4.c  5.c
Java/: HelloWorld.java  MouseDrag.java  package.bluej
Java/test/: Solution.java
Number System/: 9's_complement.c
OOP Lab/Week 11/: 1.cpp  3.cpp  4.cpp  5.cpp
OOP Lab/Week 12/: 4.cpp  4t.cpp
OOP Lab/Week 13/: 3.cpp  4.cpp  6.cpp
OOP Lab/Week 14/: 2.cpp  4.cpp  6.cpp
OOP Lab/Week 15/: 1.cpp  3.cpp  4.cpp
OOP Lab/Week 3/: 1.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp
OOP Lab/Week 4/: 2.cpp  4.cpp  5.cpp
OOP Lab/Week 5/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
OOP Lab/Week 6/: 2.cpp  3.cpp  test.cpp
OOP Lab/Week 7/: 3.cpp  5.cpp
OOP Lab/Week 8/: 1.cpp  3.cpp  5.cpp  6.cpp
OOP Lab/Week 9/: 1.cpp  2.cpp  3.cpp  4.cpp
OOP lab/Week 1/: 1.c  2.c  3.c
OOP lab/Week 2/: 2.c  7.c
(+372 files in other folders)
