cmake_minimum_required(VERSION 3.21)
project(Coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coding
        "3rd semester/DSA Lab/lab exam/1.c"
        "3rd semester/DSA Lab/lab exam/2.c"
        "3rd semester/DSA Lab/Week 1/HA/1.c"
        "3rd semester/DSA Lab/Week 1/HA/1_warning.c"
        "3rd semester/DSA Lab/Week 1/HA/2.c"
        "3rd semester/DSA Lab/Week 1/LA/1.c"
        "3rd semester/DSA Lab/Week 1/LA/2.c"
        "3rd semester/DSA Lab/Week 1/LA/3.c"
        "3rd semester/DSA Lab/Week 1/LA/4.c"
        "3rd semester/DSA Lab/Week 1/LA/5.c"
        "3rd semester/DSA Lab/Week 1/LA/6.c"
        "3rd semester/DSA Lab/Week 1/LA/7.c"
        "3rd semester/DSA Lab/Week 10/BST.c"
        "3rd semester/DSA Lab/Week 10/BST1.c"
        "3rd semester/DSA Lab/Week 10/test.c"
        "3rd semester/DSA Lab/Week 11/1.c"
        "3rd semester/DSA Lab/Week 11/2.c"
        "3rd semester/DSA Lab/Week 11/3.c"
        "3rd semester/DSA Lab/Week 11/4.c"
        "3rd semester/DSA Lab/Week 11/5.c"
        "3rd semester/DSA Lab/Week 11/5copy.c"
        "3rd semester/DSA Lab/Week 11/6.c"
        "3rd semester/DSA Lab/Week 11/6copy.c"
        "3rd semester/DSA Lab/Week 12/Allsort.c"
        "3rd semester/DSA Lab/Week 12/Bubblesort.c"
        "3rd semester/DSA Lab/Week 12/Heapsort.c"
        "3rd semester/DSA Lab/Week 12/Insertionsort.c"
        "3rd semester/DSA Lab/Week 12/Selectionsort.c"
        "3rd semester/DSA Lab/Week 12/temp.c"
        "3rd semester/DSA Lab/Week 2/LA/1.c"
        "3rd semester/DSA Lab/Week 2/LA/2.c"
        "3rd semester/DSA Lab/Week 2/LA/3.c"
        "3rd semester/DSA Lab/Week 3/LA/1.c"
        "3rd semester/DSA Lab/Week 3/LA/2.c"
        "3rd semester/DSA Lab/Week 3/LA/2_warning.c"
        "3rd semester/DSA Lab/Week 3/LA/3.c"
        "3rd semester/DSA Lab/Week 4/LA/1.c"
        "3rd semester/DSA Lab/Week 4/LA/2.c"
        "3rd semester/DSA Lab/Week 4/LA/3.c"
        "3rd semester/DSA Lab/Week 4/LA/4.c"
        "3rd semester/DSA Lab/Week 4/LA/5.c"
        "3rd semester/DSA Lab/Week 4/LA/6.c"
        "3rd semester/DSA Lab/Week 5/LA/1.c"
        "3rd semester/DSA Lab/Week 5/LA/2.c"
        "3rd semester/DSA Lab/Week 5/LA/3.c"
        "3rd semester/DSA Lab/Week 5/LA/4.c"
        "3rd semester/DSA Lab/Week 5/LA/5.c"
        "3rd semester/DSA Lab/Week 6/LA/1.c"
        "3rd semester/DSA Lab/Week 6/LA/2.c"
        "3rd semester/DSA Lab/Week 6/LA/3.c"
        "3rd semester/DSA Lab/Week 6/LA/4.c"
        "3rd semester/DSA Lab/Week 6/LA/5.c"
        "3rd semester/DSA Lab/Week 7/LA/1.c"
        "3rd semester/DSA Lab/Week 7/LA/2.c"
        "3rd semester/DSA Lab/Week 7/LA/3.c"
        "3rd semester/DSA Lab/Week 7/LA/4.c"
        "3rd semester/DSA Lab/Week 8/1.c"
        "3rd semester/DSA Lab/Week 8/2.c"
        "3rd semester/DSA Lab/Week 8/3.c"
        "3rd semester/DSA Lab/Week 8/4.c"
        "3rd semester/DSA Lab/Week 8/5.c"
        "3rd semester/DSA Lab/Week 9/1.c"
        "3rd semester/DSA Lab/Week 9/2.c"
        "3rd semester/DSA Lab/Week 9/3.c"
        "3rd semester/DSA Lab/Week 9/4.c"
        "3rd semester/DSA Lab/Week 9/5.c"
        "3rd semester/DSA Lab/Week 9/6.c"
        "3rd semester/OOP Lab/Week 1/1.c"
        "3rd semester/OOP Lab/Week 1/2.c"
        "3rd semester/OOP Lab/Week 1/3.c"
        "3rd semester/OOP Lab/Week 10/1.cpp"
        "3rd semester/OOP Lab/Week 10/2.cpp"
        "3rd semester/OOP Lab/Week 11/1.cpp"
        "3rd semester/OOP Lab/Week 11/2.cpp"
        "3rd semester/OOP Lab/Week 11/3.cpp"
        "3rd semester/OOP Lab/Week 11/4.cpp"
        "3rd semester/OOP Lab/Week 11/5.cpp"
        "3rd semester/OOP Lab/Week 11/6.cpp"
        "3rd semester/OOP Lab/Week 12/1.cpp"
        "3rd semester/OOP Lab/Week 12/2.cpp"
        "3rd semester/OOP Lab/Week 12/3.cpp"
        "3rd semester/OOP Lab/Week 12/4.cpp"
        "3rd semester/OOP Lab/Week 12/4t.cpp"
        "3rd semester/OOP Lab/Week 13/1.cpp"
        "3rd semester/OOP Lab/Week 13/2.cpp"
        "3rd semester/OOP Lab/Week 13/3.cpp"
        "3rd semester/OOP Lab/Week 13/4.cpp"
        "3rd semester/OOP Lab/Week 13/5a.cpp"
        "3rd semester/OOP Lab/Week 13/5b.cpp"
        "3rd semester/OOP Lab/Week 13/6.cpp"
        "3rd semester/OOP Lab/Week 14/1.cpp"
        "3rd semester/OOP Lab/Week 14/2.cpp"
        "3rd semester/OOP Lab/Week 14/3.cpp"
        "3rd semester/OOP Lab/Week 14/4.cpp"
        "3rd semester/OOP Lab/Week 14/5.cpp"
        "3rd semester/OOP Lab/Week 14/6.cpp"
        "3rd semester/OOP Lab/Week 14/7.cpp"
        "3rd semester/OOP Lab/Week 15/1.cpp"
        "3rd semester/OOP Lab/Week 15/2.cpp"
        "3rd semester/OOP Lab/Week 15/3.cpp"
        "3rd semester/OOP Lab/Week 15/4.cpp"
        "3rd semester/OOP Lab/Week 15/5.cpp"
        "3rd semester/OOP Lab/Week 2/1.c"
        "3rd semester/OOP Lab/Week 2/2.c"
        "3rd semester/OOP Lab/Week 2/3.c"
        "3rd semester/OOP Lab/Week 2/4.cpp"
        "3rd semester/OOP Lab/Week 2/5.cpp"
        "3rd semester/OOP Lab/Week 2/6.c"
        "3rd semester/OOP Lab/Week 2/7.c"
        "3rd semester/OOP Lab/Week 3/1.cpp"
        "3rd semester/OOP Lab/Week 3/2.cpp"
        "3rd semester/OOP Lab/Week 3/3.cpp"
        "3rd semester/OOP Lab/Week 3/4.cpp"
        "3rd semester/OOP Lab/Week 3/5.cpp"
        "3rd semester/OOP Lab/Week 3/6.cpp"
        "3rd semester/OOP Lab/Week 3/7.cpp"
        "3rd semester/OOP Lab/Week 4/1.cpp"
        "3rd semester/OOP Lab/Week 4/2.cpp"
        "3rd semester/OOP Lab/Week 4/3.cpp"
        "3rd semester/OOP Lab/Week 4/4.cpp"
        "3rd semester/OOP Lab/Week 4/5.cpp"
        "3rd semester/OOP Lab/Week 4/6.cpp"
        "3rd semester/OOP Lab/Week 5/1.cpp"
        "3rd semester/OOP Lab/Week 5/2.cpp"
        "3rd semester/OOP Lab/Week 5/3.cpp"
        "3rd semester/OOP Lab/Week 5/4.cpp"
        "3rd semester/OOP Lab/Week 5/5.cpp"
        "3rd semester/OOP Lab/Week 5/6.cpp"
        "3rd semester/OOP Lab/Week 6/1.cpp"
        "3rd semester/OOP Lab/Week 6/2.cpp"
        "3rd semester/OOP Lab/Week 6/3.cpp"
        "3rd semester/OOP Lab/Week 6/4.cpp"
        "3rd semester/OOP Lab/Week 6/5.cpp"
        "3rd semester/OOP Lab/Week 6/6.cpp"
        "3rd semester/OOP Lab/Week 6/test.cpp"
        "3rd semester/OOP Lab/Week 7/1.cpp"
        "3rd semester/OOP Lab/Week 7/2.cpp"
        "3rd semester/OOP Lab/Week 7/3.cpp"
        "3rd semester/OOP Lab/Week 7/4.cpp"
        "3rd semester/OOP Lab/Week 7/5.cpp"
        "3rd semester/OOP Lab/Week 8/1.cpp"
        "3rd semester/OOP Lab/Week 8/2.cpp"
        "3rd semester/OOP Lab/Week 8/3.cpp"
        "3rd semester/OOP Lab/Week 8/4.cpp"
        "3rd semester/OOP Lab/Week 8/5.cpp"
        "3rd semester/OOP Lab/Week 8/6.cpp"
        "3rd semester/OOP Lab/Week 9/1.cpp"
        "3rd semester/OOP Lab/Week 9/2.cpp"
        "3rd semester/OOP Lab/Week 9/3.cpp"
        "3rd semester/OOP Lab/Week 9/4.cpp"
        "3rd semester/OOP Lab/Week 9/5.cpp"
        Assignments/LL1.c
        Assignments/LL2.c
        Assignments/oop1.cpp
        Assignments/oop10a1.cpp
        Assignments/oop10a2.cpp
        Assignments/oop10a3.cpp
        Assignments/oop10b1.cpp
        Assignments/oop10b2.cpp
        Assignments/oop8a.cpp
        Assignments/oop8a2.cpp
        Assignments/oop8b.cpp
        Assignments/oop8b1.cpp
        Assignments/oop8b2.cpp
        Assignments/oop8b2b.cpp
        Assignments/Power.c
        Assignments/Queue.c
        C/kstack.c
        C++/Others/quicksort.cpp
        C++/Others/Reassembler.cpp
        C++/Others/test.cpp
        C++/Others/test1.cpp
        C++/Others/TimeFormat.cpp
        C++/1'sComplement.cpp
        C++/2'sComplement.cpp
        C++/Absolutesum.cpp
        C++/Armstrong.cpp
        C++/Arrayreverse.cpp
        C++/BinaryToDecimal.cpp
        C++/C++Test1.cpp
        C++/CSEcalculator.cpp
        C++/DecimalToBinary.cpp
        C++/Factorial.cpp
        C++/Fibonacci_recursive.cpp
        C++/Fibonnaci.cpp
        C++/MatrixMultiplication.cpp
        C++/Palindrome.cpp
        C++/Primenumber.cpp
        C++/PrimeNumberRecursive.cpp
        C++/quicksort.cpp
        C++/Reassembler.cpp
        C++/RecursiveFactorial.cpp
        C++/RecursivePalindrome.cpp
        C++/ReverseNumber.cpp
        C++/Sumofdigits.cpp
        C++/SwapWithoutThirdVar.cpp
        "C++/test copy.cpp"
        C++/test.c
        C++/test.cpp
        "C++/test1 copy.cpp"
        C++/test1.cpp
        C++/TimeFormat.cpp
        C++/vectorTest.cpp
        Coursera/1.c
        Coursera/2.c
        Coursera/3.c
        Coursera/4.c
        Coursera/5.c
        Coursera/6.c
        Coursera/poem.c
        Coursera/test6.c
        "Coursera unordered/1.c"
        "Coursera unordered/2.c"
        "Coursera unordered/2.cpp"
        "Coursera unordered/2n.c"
        "Coursera unordered/Binarytree.c"
        "Coursera unordered/c.c"
        "Coursera unordered/ctocpp.cpp"
        "Coursera unordered/doublylinkedlist.c"
        "Coursera unordered/filearray.c"
        "Coursera unordered/Operatoroverload.cpp"
        "Coursera unordered/test.c"
        "Coursera unordered/testBT.c")
