cmake_minimum_required(VERSION 3.21)
project(3rd_semester)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(3rd_semester
        "DSA Lab/lab exam/1.c"
        "DSA Lab/lab exam/2.c"
        "DSA Lab/Week 1/HA/1.c"
        "DSA Lab/Week 1/HA/1_warning.c"
        "DSA Lab/Week 1/HA/2.c"
        "DSA Lab/Week 1/LA/1.c"
        "DSA Lab/Week 1/LA/2.c"
        "DSA Lab/Week 1/LA/3.c"
        "DSA Lab/Week 1/LA/4.c"
        "DSA Lab/Week 1/LA/5.c"
        "DSA Lab/Week 1/LA/6.c"
        "DSA Lab/Week 1/LA/7.c"
        "DSA Lab/Week 10/BST.c"
        "DSA Lab/Week 10/BST1.c"
        "DSA Lab/Week 10/test.c"
        "DSA Lab/Week 11/1.c"
        "DSA Lab/Week 11/2.c"
        "DSA Lab/Week 11/3.c"
        "DSA Lab/Week 11/4.c"
        "DSA Lab/Week 11/5.c"
        "DSA Lab/Week 11/5copy.c"
        "DSA Lab/Week 11/6.c"
        "DSA Lab/Week 11/6copy.c"
        "DSA Lab/Week 12/Allsort.c"
        "DSA Lab/Week 12/Bubblesort.c"
        "DSA Lab/Week 12/Heapsort.c"
        "DSA Lab/Week 12/Insertionsort.c"
        "DSA Lab/Week 12/Selectionsort.c"
        "DSA Lab/Week 12/temp.c"
        "DSA Lab/Week 2/LA/1.c"
        "DSA Lab/Week 2/LA/2.c"
        "DSA Lab/Week 2/LA/3.c"
        "DSA Lab/Week 3/LA/1.c"
        "DSA Lab/Week 3/LA/2.c"
        "DSA Lab/Week 3/LA/2_warning.c"
        "DSA Lab/Week 3/LA/3.c"
        "DSA Lab/Week 4/LA/1.c"
        "DSA Lab/Week 4/LA/2.c"
        "DSA Lab/Week 4/LA/3.c"
        "DSA Lab/Week 4/LA/4.c"
        "DSA Lab/Week 4/LA/5.c"
        "DSA Lab/Week 4/LA/6.c"
        "DSA Lab/Week 5/LA/1.c"
        "DSA Lab/Week 5/LA/2.c"
        "DSA Lab/Week 5/LA/3.c"
        "DSA Lab/Week 5/LA/4.c"
        "DSA Lab/Week 5/LA/5.c"
        "DSA Lab/Week 6/LA/1.c"
        "DSA Lab/Week 6/LA/2.c"
        "DSA Lab/Week 6/LA/3.c"
        "DSA Lab/Week 6/LA/4.c"
        "DSA Lab/Week 6/LA/5.c"
        "DSA Lab/Week 7/LA/1.c"
        "DSA Lab/Week 7/LA/2.c"
        "DSA Lab/Week 7/LA/3.c"
        "DSA Lab/Week 7/LA/4.c"
        "DSA Lab/Week 8/1.c"
        "DSA Lab/Week 8/2.c"
        "DSA Lab/Week 8/3.c"
        "DSA Lab/Week 8/4.c"
        "DSA Lab/Week 8/5.c"
        "DSA Lab/Week 9/1.c"
        "DSA Lab/Week 9/2.c"
        "DSA Lab/Week 9/3.c"
        "DSA Lab/Week 9/4.c"
        "DSA Lab/Week 9/5.c"
        "DSA Lab/Week 9/6.c"
        "OOP Lab/Week 1/1.c"
        "OOP Lab/Week 1/2.c"
        "OOP Lab/Week 1/3.c"
        "OOP Lab/Week 10/1.cpp"
        "OOP Lab/Week 10/2.cpp"
        "OOP Lab/Week 11/1.cpp"
        "OOP Lab/Week 11/2.cpp"
        "OOP Lab/Week 11/3.cpp"
        "OOP Lab/Week 11/4.cpp"
        "OOP Lab/Week 11/5.cpp"
        "OOP Lab/Week 11/6.cpp"
        "OOP Lab/Week 12/1.cpp"
        "OOP Lab/Week 12/2.cpp"
        "OOP Lab/Week 12/3.cpp"
        "OOP Lab/Week 12/4.cpp"
        "OOP Lab/Week 12/4t.cpp"
        "OOP Lab/Week 13/1.cpp"
        "OOP Lab/Week 13/2.cpp"
        "OOP Lab/Week 13/3.cpp"
        "OOP Lab/Week 13/4.cpp"
        "OOP Lab/Week 13/5a.cpp"
        "OOP Lab/Week 13/5b.cpp"
        "OOP Lab/Week 13/6.cpp"
        "OOP Lab/Week 14/1.cpp"
        "OOP Lab/Week 14/2.cpp"
        "OOP Lab/Week 14/3.cpp"
        "OOP Lab/Week 14/4.cpp"
        "OOP Lab/Week 14/5.cpp"
        "OOP Lab/Week 14/6.cpp"
        "OOP Lab/Week 14/7.cpp"
        "OOP Lab/Week 15/1.cpp"
        "OOP Lab/Week 15/2.cpp"
        "OOP Lab/Week 15/3.cpp"
        "OOP Lab/Week 15/4.cpp"
        "OOP Lab/Week 15/5.cpp"
        "OOP Lab/Week 2/1.c"
        "OOP Lab/Week 2/2.c"
        "OOP Lab/Week 2/3.c"
        "OOP Lab/Week 2/4.cpp"
        "OOP Lab/Week 2/5.cpp"
        "OOP Lab/Week 2/6.c"
        "OOP Lab/Week 2/7.c"
        "OOP Lab/Week 3/1.cpp"
        "OOP Lab/Week 3/2.cpp"
        "OOP Lab/Week 3/3.cpp"
        "OOP Lab/Week 3/4.cpp"
        "OOP Lab/Week 3/5.cpp"
        "OOP Lab/Week 3/6.cpp"
        "OOP Lab/Week 3/7.cpp"
        "OOP Lab/Week 4/1.cpp"
        "OOP Lab/Week 4/2.cpp"
        "OOP Lab/Week 4/3.cpp"
        "OOP Lab/Week 4/4.cpp"
        "OOP Lab/Week 4/5.cpp"
        "OOP Lab/Week 4/6.cpp"
        "OOP Lab/Week 5/1.cpp"
        "OOP Lab/Week 5/2.cpp"
        "OOP Lab/Week 5/3.cpp"
        "OOP Lab/Week 5/4.cpp"
        "OOP Lab/Week 5/5.cpp"
        "OOP Lab/Week 5/6.cpp"
        "OOP Lab/Week 6/1.cpp"
        "OOP Lab/Week 6/2.cpp"
        "OOP Lab/Week 6/3.cpp"
        "OOP Lab/Week 6/4.cpp"
        "OOP Lab/Week 6/5.cpp"
        "OOP Lab/Week 6/6.cpp"
        "OOP Lab/Week 6/test.cpp"
        "OOP Lab/Week 7/1.cpp"
        "OOP Lab/Week 7/2.cpp"
        "OOP Lab/Week 7/3.cpp"
        "OOP Lab/Week 7/4.cpp"
        "OOP Lab/Week 7/5.cpp"
        "OOP Lab/Week 8/1.cpp"
        "OOP Lab/Week 8/2.cpp"
        "OOP Lab/Week 8/3.cpp"
        "OOP Lab/Week 8/4.cpp"
        "OOP Lab/Week 8/5.cpp"
        "OOP Lab/Week 8/6.cpp"
        "OOP Lab/Week 9/1.cpp"
        "OOP Lab/Week 9/2.cpp"
        "OOP Lab/Week 9/3.cpp"
        "OOP Lab/Week 9/4.cpp"
        "OOP Lab/Week 9/5.cpp")
